tests/negative/comptime/unreachable.orng
// unreachable.orng:6:28: error: comptime cannot be type `Void`
//     let x: Int = comptime { unreachable }
//                           ^
// 
fn main() -> Int {
    let x: Int = comptime { unreachable }
    x
}